<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ke.co.sombo.apps.businessprofile.MainActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ice_cream"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/app_name"
            android:id="@+id/ice_cream"
            android:src="@drawable/ice_cream_pic"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/whiteText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_toEndOf="@id/ice_cream"
            android:layout_alignParentBottom="true"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginBottom="10dp"
            android:text="@string/title"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/blackText"
            android:textAllCaps="false"
            android:text="@string/description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                style="?attr/buttonBarStyle"
                android:drawableTop="@drawable/ic_contact"
                android:padding="2dp"
                android:text="@string/contact_info"
                android:textAllCaps="true"
                android:textColor="@color/whiteText"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="loadContactFragment"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/location"
                style="?attr/buttonBarStyle"
                android:textAllCaps="true"
                android:drawableTop="@drawable/ic_place"
                android:padding="2dp"
                android:textColor="@color/whiteText"
                android:background="@drawable/button_bg"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:onClick="loadLocationFragment"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/my_fragment"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
